[package]
name = "openclaw-overlay"
version = "0.1.0"
description = "Always-on-top HUD overlay for OpenClaw"
authors = ["Solomon Neas <me@solomonneas.dev>"]
license = "MIT"
repository = "https://github.com/solomonneas/openclaw-overlay"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tauri-plugin-shell = "2"
